# hyprmac

./: CMakeLists.txt  README.md  hyprpm.toml  main.cpp
docs/: caps-lock-indicator.md
src/features/caps_lock/: CapsLockIndicator.cpp  CapsLockIndicator.hpp
src/features/volume/: VolumeController.cpp  VolumeController.hpp
src/features/volume_sound/: VolumeSound.cpp  VolumeSound.hpp  miniaudio_impl.cpp
